--- a/ex10-on-click.html
+++ b/ex10-on-click.html
@@ -28,7 +28,7 @@
         a.addEventListener('mouseout', sair)
            function clicar() {
             
-            a.innerText = 'Clicou!'
+            a.innerText = 'Clicouu!'
             a.style.background = 'yellow'
            }
 
